# dynet-c

./: .gitignore  CMakeLists.txt  LICENSE  README.md  c_api.cc  c_api.h  c_api_internal.h  test.c
